// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App2 basic 1`] = `
Array [
  <div>
    <div>
      hello app2
    </div>
    <div />
  </div>,
  <div>
    <div>
      hello app2
    </div>
    <div />
  </div>,
]
`;

exports[`app2 test update 1`] = `
Array [
  <div>
    <div>
      hello app2 inc
    </div>
    <div />
  </div>,
  <div>
    <div>
      hello app2 inc
    </div>
    <div />
  </div>,
]
`;
